re-rename to NCPi

--- a/l10n/de.json
+++ b/l10n/de.json
@@ -5,5 +5,5 @@
   "run": "Ausführen",
   "skip": "&Uuml;berspringen",
   "close": "Schlie&szlig;en",
-  "Configure NextCloudPlus features": "NextCloudPlus Funktionen konfigurieren"
+  "Configure NextCloudPi features": "NextCloudPi Funktionen konfigurieren"
 }}
